swagger doc up but request not working yet
